--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <h1 align="center">tabel javascript sederhana</h1>
 <table class="table">
     <tr>
-        <th scope="col" data-column="name" > Nama </th>
-        <th scope="col" data-column="age" > Email</th> </th>
-        <th scope="col" data-column="birthdate" > Telepon</th>
+        <th scope="col" data-column="nama" > Nama </th>
+        <th scope="col" data-column="email" > Email</th> </th>
+        <th scope="col" data-column="telepon" > Telepon</th>
     </tr>
 
     <tbody id="myTable">
