--- a/index.html
+++ b/index.html
@@ -8,12 +8,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-	
-</body>
-
-
-
 
 <style>
     
@@ -21,23 +15,15 @@
 
 <h1>tabel javascript sederhana</h1>
 <table id ="fetch" class="table">
-    <tr>
-<<<<<<< HEAD
-        <th scope="col" > Nama </th>
-        <th scope="col" > Email</th> </th>
-        <th scope="col" > Telepon</th>
-=======
-        <th scope="col" data-column="nama" > Nama </th>
-        <th scope="col" data-column="email" > Email</th> </th>
-        <th scope="col" data-column="telepon" > Telepon</th>
->>>>>>> f52576bd8bd1bd4e71c58c40b32fe43aed708eff
-    </tr>
+	<tbody>
+		<tr id='table-header-place-holder'>
+		</tr>
+	</tbody>
 
     
 </table>
 
-<script src="./src/index.js">
-
-
+<script type="module" src="./src/index.js" >
+	
 </script>
 </html>
